# t-nav-sim

./: .gitignore  README.md  TODO.md  settings.yaml
backend/: api_sim.py  api_ws.py  client_hub.py  main.py  models.py  requirements.txt  run_dev.ps1  run_prod.ps1  simulation.py  simulation_service.py
backend/adapters/: __init__.py  dryrun_devices.py  hackrf_transmitter.py  route_mapper.py  serial_speed_bearing.py  ws_event_sink.py
backend/api/: route.py  sim.py
backend/app/: __init__.py  app_settings.py  deps.py  gen_service.py  jobs.py  logger.py  main.py  run_jobs.py  run_service.py  schemas.py  session_store.py  settings.py  settings_store.py
backend/core/: __init__.py  orchestrator.py  ports.py
backend/factories/: __init__.py  sim_factory.py
backend/runtime/: __init__.py  sim_factory.py  sim_manager.py  sim_state.py
backend/sim/: README.md
backend/sim_core/: __init__.py  orchestrator.py  pipeline.py  ports.py
dsim/: .gitignore  README.md  pyproject.toml
dsim/src/dsim/: __init__.py
dsim/src/dsim/adapters/: __init__.py  gps_hackrf.py  iq_gps_sdr_sim.py  speed_bearing_serial.py
dsim/src/dsim/core/: __init__.py  geo.py  models.py  motion.py  port.py  reporting.py
dsim/src/dsim/core/use_cases/: __init__.py  gen.py  play.py
dsim/tests/: test_gen_use_case.py  test_motion.py  test_play_use_case.py
dsim/tools/: README.md  rsim.py  ublox_map.py
dsim/tools/sample-project/: hoankiem_1.csv
frontend/: .env.example  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+92 files in other folders)
